update corl work

--- a/index.html
+++ b/index.html
@@ -25,19 +25,14 @@
                 <p>I'm a undergraduate student at <a href="https://www.tsinghua.edu.cn/en//">Tsinghua Univeristy</a> in Beijing,  where I major in Computer Science and Technology.
                 </p>
                 <p>
-                  <strong>My research interests lie in the field of robot learning. </strong> Previously, my works most focus on reinfocement learning, multi-agent cooperation and quadruped/humanoid robots locomoition.
+                  <strong>My research interests lie in the field of robot learning. </strong> Previously, my works most focus on reinfocement learning, multi-agent cooperation and quadrupedal/humanoid robots locomoition.
                 </p>
                 <p>
                   During my undergraduate period, I was privileged to be advised by <a href="https://sites.google.com/site/thuliuhuaping/home">Prof.Huaping Liu</a> and  <a href="https://www.meche.engineering.cmu.edu/directory/bios/zhao-ding.html">Prof.Ding Zhao</a>.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
-                  <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/jonbarron/">Github</a>
+                  <a href="mailto:honcghuye03@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="https://chuye03.github.io/">Scholar</a> &nbsp;/&nbsp;
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
@@ -56,48 +51,44 @@
 
 
 
-    <tr onmouseout="cat4d_stop()" onmouseover="cat4d_start()" bgcolor="#ffffd0">
+    <tr onmouseout="hrl_stop()" onmouseover="hrl_start()" bgcolor="#ffffd0">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='cat4d_image'><video  width=100% height=100% muted autoplay loop>
-          <source src="images/cat4d.mp4" type="video/mp4">
+          <div class="two" id='hrl_image'><video  width=100% height=100% muted autoplay loop>
+          <source src="images/d-hrl.png" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/cat4d.jpg' width="160">
+          <img src='images/d-hrl.png' width="160">
         </div>
         <script type="text/javascript">
-          function cat4d_start() {
-            document.getElementById('cat4d_image').style.opacity = "1";
+          function hrl_start() {
+            document.getElementById('hrl_image').style.opacity = "1";
           }
 
-          function cat4d_stop() {
-            document.getElementById('cat4d_image').style.opacity = "0";
+          function hrl_stop() {
+            document.getElementById('hrl_image').style.opacity = "0";
           }
-          cat4d_stop()
+          hrl_stop()
         </script>
       </td>
       <td style="padding:8px;width:80%;vertical-align:middle">
-        <a href="https://cat-4d.github.io/">
-			<span class="papertitle">CAT4D: Create Anything in 4D with Multi-View Video Diffusion Models
+        <a href="https://d-hrl.github.io/">
+			<span class="papertitle">Learning a Distributed Hierarchical Locomotion Controller for Embodied Cooperation
 </span>
         </a>
         <br>
-				<a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu</a>,
-				<a href="https://ruiqigao.github.io/">Ruiqi Gao</a>,
-				<a href="https://poolio.github.io/">Ben Poole</a>,
-				<a href="https://alextrevithick.github.io/">Alex Trevithick</a>,
-				<a href="https://www.cs.columbia.edu/~cxz/index.htm/">Changxi Zheng</a>,
-				<strong>Jonathan T. Barron</strong>,
-				<a href="https://holynski.org/">Aleksander Holynski</a>
+				<strong>Chuye Hong</strong>,
+				<a href="https://kangyao-huang.tech/">Kangyao Huang</a>,
+				<a href="https://sites.google.com/site/thuliuhuaping/home">Huaping Liu</a>,
         <br>
-        <em>arXiv</em>, 2024
+        <em>Conference on Robot Learning <strong>(CoRL)</strong> 2024</em>,
         <br>
-        <a href="https://cat-4d.github.io/">project page</a>
+        <a href="https://d-hrl.github.io/">project page</a>
         /
-        <a href="https://arxiv.org/abs/2411.18613">arXiv</a>
+        <a href="https://www.arxiv.org/abs/2407.06499">arXiv</a>
         <p></p>
         <p>
-				An approach for turning a video into a 4D radiance field that can be rendered in real-time. When combined with a text-to-video model, this enables text-to-4D.
+          We propose a distributed hierarchical locomotion control strategy for whole-body cooperation and demonstrate the potential for migration into large numbers of agents.
         </p>
       </td>
     </tr>
