--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:honcghuye03@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="https://chuye03.github.io/">Scholar</a> &nbsp;/&nbsp;
+                  <a href="https://chuye03.github.io/">Scholar</a> &nbsp;&nbsp;
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
@@ -49,9 +49,56 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+    <tr onmouseout="ma_push_stop()" onmouseover="ma_push_start()">
+            <td style="padding:16px;width:20%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='ma_push'>
+                  <img src='images/ma_push.png' width=100%>
+                </div>
+                <img src='images/ma_push.png' width=100%>
+              </div>
+              <script type="text/javascript">
+                function ma_push_start() {
+                  document.getElementById('ma_push').style.opacity = "1";
+                }
 
+                function ma_push_stop() {
+                  document.getElementById('ma_push').style.opacity = "0";
+                }
+                ma_push_stop()
+              </script>
+            </td>
+            <td style="padding:8px;width:80%;vertical-align:middle">
+              <a href="https://collaborative-mapush.github.io/">
+            <span class="papertitle">Learning Multi-Agent Collaborative Manipulation for Long-Horizon Quadrupedal Pushing
+      </span>
+              </a>
+              <br>
+              <strong>Chuye Hong*</strong>, 
+              <a href="">Yuming Feng*</a>,
+              <a href="https://yaruniu.com/">Yaru Niu*</a>,
+              <a href="https://shiqiliu-67.github.io/">Shiqi Liu</a>,
+              <a href="https://yxyang.github.io/">Yuxiang Yang</a>,
+              <a href="https://wenhaoyu.weebly.com/">Wenhao Yu</a>,
+              <a href="https://research.google/people/tingnanzhang/?&type=google">Tingnan Zhang</a>,
+              <a href="https://www.jie-tan.net/">Jie Tan</a>,
+              <a href="https://www.meche.engineering.cmu.edu/directory/bios/zhao-ding.html">Ding Zhao</a>
+              <br>
+              <em> Submited to IEEE International Conference on Robotics and Automation <strong>(ICRA)</strong> 2025</em>,
+              <br>
+              <a href="https://collaborative-mapush.github.io/">project page</a>
+              /
+              <a href="https://arxiv.org/abs/2411.07104v1">arXiv</a>
+              /
+              <a href="https://github.com/collaborative-mapush/MAPush">code</a>
+              <p></p>
+              <p>
+                We tackle the task of obstacle-aware, long-horizon pushing by multiple quadrupedal robots.
+              </p>
+            </td>
+    </tr>
 
-    <tr onmouseout="hrl_stop()" onmouseover="hrl_start()" bgcolor="#ffffd0">
+    <tr onmouseout="hrl_stop()" onmouseover="hrl_start()">
       <td style="padding:16px;width:20%;vertical-align:middle">
         <div class="one">
           <div class="two" id='hrl_image'><video  width=100% height=100% muted autoplay loop>
@@ -188,7 +235,7 @@
             </tr>
             
           </tbody></table> -->
-          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:0px">
                 <br>
@@ -197,7 +244,7 @@
                 </p>
               </td>
             </tr>
-          </tbody></table>
+          </tbody></table> -->
         </td>
       </tr>
     </table>
