--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href="https://www.jie-tan.net/">Jie Tan</a>,
               <a href="https://www.meche.engineering.cmu.edu/directory/bios/zhao-ding.html">Ding Zhao</a>
               <br>
-              <em> Submited to IEEE International Conference on Robotics and Automation <strong>(ICRA)</strong> 2025</em>,
+              <em> Submited to IEEE International Conference on Robotics and Automation <strong>(ICRA)</strong>, 2025</em>
               <br>
               <a href="https://collaborative-mapush.github.io/">project page</a>
               /
@@ -132,7 +132,7 @@
 				<a href="https://kangyao-huang.tech/">Kangyao Huang</a>,
 				<a href="https://sites.google.com/site/thuliuhuaping/home">Huaping Liu</a>,
         <br>
-        <em>Conference on Robot Learning <strong>(CoRL)</strong> 2024</em>,
+        <em>Conference on Robot Learning <strong>(CoRL)</strong>, 2024</em>
         <br>
         <a href="https://d-hrl.github.io/">project page</a>
         /
