Update ICRA 2025 acception.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href="https://www.jie-tan.net/">Jie Tan</a>,
               <a href="https://www.meche.engineering.cmu.edu/directory/bios/zhao-ding.html">Ding Zhao</a>
               <br>
-              <em> Submited to IEEE International Conference on Robotics and Automation <strong>(ICRA)</strong>, 2025</em>
+              <em> IEEE International Conference on Robotics and Automation <strong>(ICRA)</strong>, 2025</em>
               <br>
               <a href="https://collaborative-mapush.github.io/">project page</a>
               /
