--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/Chuye.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/Chuye_fig.jpg" class="hoverZoomLink"></a>
+                <a href="images/Chuye.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/Chuye.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
